# adventofcode23

./: CMakeLists.txt
day1/: part1.c  part2.c
day10/: part1.c
day2/: part1.c  part2.c
day3/: part1.c  part2.c
day4/: part1.c
day6/: part1.c  part2.c
